--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: hsl(228, 38%, 3%);
+    font-family: 'rubik', sans-serif;
 }
 
 article {
@@ -163,4 +164,146 @@ header, section {
 #selfcare {
     background: hsl(43, 84%, 65%) url("../images/icon-self-care.svg") no-repeat;
     background-position: 95% -10px;
+}
+
+@media screen and (min-width: 1024px) {
+    article {
+        display: grid;
+        grid-template-columns: 1fr repeat(3, 1fr);
+        grid-template-rows: 1fr 1fr;
+        gap: 10px 10px;
+        max-width: 1440px;
+        max-height: 1056px;
+        padding: 40px;
+    }
+
+    #profil {
+        grid-column: 1 / 1;
+        grid-row: 1 / -1;
+        height: 100%;
+    }
+
+    header {
+        max-height: 650px;
+        max-width: 310px;
+    }
+
+    #profil_main {
+        height: 380px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.50fr 1fr;
+        padding: 20px 20px;
+        max-width: 300px;
+    }
+
+    .img_profil {
+        width: 100px;
+        height: auto;
+        border: 4px solid white;
+        border-radius: 70px;
+        margin-left: 0;
+    }
+
+    .content_information {
+        align-items: center;
+        
+    } 
+
+    .content_information p {
+        font-size: 18px;
+        margin-bottom: 0;
+        margin-top: 30px;
+    } 
+
+    .content_information h1 {
+        font-size: 50px;
+        font-weight: 400;
+        margin-top: 0;
+    }
+
+    #button {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        font-size: 18px;
+        width: 100px;
+        gap: 10px;
+    }
+
+    .button {
+        font-size: 18px;
+        margin-top: 30px;
+        text-align: left;
+    }
+
+    section {
+        height: 300px;
+        max-width: 310px;
+    }
+
+    .content {
+        display: grid;
+        margin-top: 45px;
+        height: 255px;
+        grid-template-columns: 65% 35%;
+        grid-template-rows: 25% 75%;
+        align-items: flex-start;
+    }
+
+    .title_Activity {
+        margin-top: 40px;
+        margin-left: 20px;
+        font-size: 26px;
+    }
+
+    .img_content {
+        justify-content: flex-start;
+        margin: 50px 0 0 50px;
+    }
+
+    .current {
+        grid-column: 1 / 1;
+        grid-row: 2 / 2;
+        font-size: 50px;
+        font-weight: 600;
+        letter-spacing: 2px;
+        margin-top: 40px;
+    }
+
+    .previous {
+        text-align: left;
+        grid-column: 1 / 1;
+        grid-row: 2 / 2;
+        margin-top: 120px;
+        margin-left: 20px;
+    }
+
+    #work {
+        grid-column: 2 / 2;
+        grid-row: 1 / 1;
+    }
+    
+    #play {
+        grid-column: 3 / 3;
+        grid-row: 1 / 1;
+    }
+
+    #study {
+        grid-column: 4 / 4;
+        grid-row: 1 / 1;
+    }
+
+    #exercise {
+        grid-column: 2 / 2;
+        grid-row: 2 / 2 ;
+    }
+
+    #social {
+        grid-column: 3 / 3;
+        grid-row: 2 / 2;
+    }
+
+    #selfcare {
+        grid-column: 4 / 4;
+        grid-row: 2 / 2;
+    }
 }
